# eval-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: code_checks.yml  publish.yml  unit_tests.yml
aieng-eval-agents/: pyproject.toml
aieng-eval-agents/aieng/agent_evals/: async_client_manager.py  async_utils.py  configs.py  langfuse.py  utils.py
aieng-eval-agents/aieng/agent_evals/aml_investigation/: __init__.py
aieng-eval-agents/aieng/agent_evals/aml_investigation/data/: __init__.py  cases.py  utils.py
aieng-eval-agents/aieng/agent_evals/evaluation/: EVALUATION_MODULE.md  __init__.py  experiment.py  trace.py  types.py
aieng-eval-agents/aieng/agent_evals/evaluation/graders/: __init__.py  _utils.py  config.py  llm_judge.py
aieng-eval-agents/aieng/agent_evals/impl/: __init__.py  example_impl.py
aieng-eval-agents/aieng/agent_evals/knowledge_agent/: __init__.py  tracing.py
aieng-eval-agents/aieng/agent_evals/knowledge_qa/: __init__.py  evaluation.py
aieng-eval-agents/aieng/agent_evals/knowledge_qa/data/: __init__.py  deepsearchqa.py
aieng-eval-agents/aieng/agent_evals/tools/: __init__.py  _redirect.py  search.py  sql_database.py  web.py
aieng-eval-agents/tests/aieng/agent_evals/aml_investigation/data/: test_cases.py  test_utils.py
aieng-eval-agents/tests/aieng/agent_evals/evaluation/: __init__.py  test_trace.py
aieng-eval-agents/tests/aieng/agent_evals/evaluation/graders/: __init__.py  test_llm_judge.py
aieng-eval-agents/tests/aieng/agent_evals/impl/: test_example_impl.py
aieng-eval-agents/tests/aieng/agent_evals/knowledge_qa/: test_evaluation.py
aieng-eval-agents/tests/aieng/agent_evals/knowledge_qa/data/: __init__.py  test_deepsearchqa.py
aieng-eval-agents/tests/aieng/agent_evals/tools/: test_sql_database.py  test_web.py
implementations/aml_investigation/: README.md  agent.py
implementations/aml_investigation/data/: cli.py  schema.ddl
implementations/knowledge_qa/data/: langfuse_upload.py
implementations/report_generation/: README.md  evaluate.py  file_writer.py  main.py  prompts.py
implementations/report_generation/data/: OnlineRetail.ddl  OnlineRetailReportEval.json  import_online_retail_data.py
langfuse_experiments/: .env.example  __init__.py  requirements.txt
langfuse_experiments/agent/: __init__.py  chatbot_runner.py
langfuse_experiments/config/: __init__.py  experiment_config.py
langfuse_experiments/evaluators/: __init__.py  answer_correctness_evaluator.py  base_evaluator.py  groundedness_evaluator.py  response_relevance_evaluator.py  sql_quality_evaluator.py  tool_quality_evaluator.py  trace_metrics_evaluator.py
langfuse_experiments/experiments/: run_experiment.py
