[project]
name = "aieng-eval-agents"
version = "0.1.0"
description = "Agentic AI Evaluation reference implementation from Vector Institute AI Engineering"
authors = [{name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "google-adk>=1.23.0",
    "google-genai>=1.52.0",
    "gradio>=6.0.2",
    "kagglehub>=0.4.1",
    "langfuse>=3.10.3",
    "openai>=2.8.1",
    "openai-agents>=0.6.1",
    "openinference-instrumentation-google-adk>=0.1.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "pandas>=2.3.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "rich>=13.9.0",
    "sqlalchemy>=2.0.46",
    "sqlglot>=28.6.0",
    "weaviate-client>=4.18.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["aieng/"]

[tool.hatch.build.targets.wheel]
include = ["aieng/"]
